# RCLM

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  architecture.md  debug_proxy.py  pyproject.toml  repro_codex.py  test_codex_schema.py  test_main_codex.py
.github/workflows/: ci.yml  publish.yml
rclm/: __init__.py  _config.py  _endpoints.py  _models.py  _uploader.py  cli.py  convert.py  update.py
rclm/compress/: cli.py  runner.py
rclm/compress/filters/: __init__.py  git.py  shell.py  test.py
rclm/hooks/: __init__.py  _analytics.py  claude_handler.py  codex_handler.py  codex_transcript.py  compress.py  dlp.py  gemini_handler.py  historical_sync.py  installer.py  redaction.py  session_store.py  transcript.py  uninstaller.py  updater.py
rclm/proxy/: __init__.py  config_template.yaml  litellm_callback.py  start.py  testplan.md
rclm/tests/: test_convert_session.py  test_uploader_redaction.py
rclm/tests/compress/: test_filters_git.py  test_filters_test.py
rclm/tests/hooks/: test_analytics.py  test_codex_handler.py  test_compress.py  test_dlp.py  test_gemini_handler.py  test_handler.py  test_historical_sync.py  test_installer.py  test_redaction.py  test_session_store.py  test_transcript.py
rclm/tests/proxy/: test_callback.py
