[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rclm"
version = "0.1.0"
description = "Capture and upload LLM sessions from local hooks and proxy integrations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ReclaimLLM" }]
license = "Apache-2.0"
keywords = ["llm", "ai", "hooks", "proxy", "claude-code", "gemini", "codex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://reclaimllm.com" }
dependencies = ["aiohttp>=3.9,<4"]

[project.optional-dependencies]
proxy = ["litellm[proxy]>=1.40,<1.82", "prisma>=0.11,<2.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-aiohttp",
    "litellm[proxy]>=1.40,<1.82",
    "prisma>=0.11,<2.0",
]

[project.scripts]
rclm-proxy = "rclm.proxy.start:main"
rclm-claude-hooks = "rclm.hooks.claude_handler:main"
rclm-codex-hooks = "rclm.hooks.codex_handler:main"
rclm-gemini-hooks = "rclm.hooks.gemini_handler:main"
rclm-hooks-install = "rclm.hooks.installer:main"
rclm-hooks-uninstall = "rclm.hooks.uninstaller:main"
rclm-update = "rclm.update:main"
rclm-compress = "rclm.compress.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from within except (stylistic preference)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"rclm/tests/**" = ["S101"]  # assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["rclm"]

[tool.hatch.build.targets.sdist]
include = [
    "/LICENSE",
    "/README.md",
    "/architecture.md",
    "/build.sh",
    "/debug_proxy.py",
    "/pyproject.toml",
    "/rclm",
]
exclude = [
    "/.git",
    "/.venv",
    "/.pytest_cache",
]
